--- a/hamburgueria/style.css
+++ b/hamburgueria/style.css
@@ -81,7 +81,8 @@ div#banner > span {
     color: black;
     position: fixed;
     margin-top: 61px;
-    margin-left: 77.4%;
+    width: 100%;
+
     
 
     
